chore(website): Cleanup template

--- a/website/themes/anpu/templates/404.html
+++ b/website/themes/anpu/templates/404.html
@@ -8,5 +8,4 @@
     <div class="content">
         Sorry, this page doesn't seem to exist.
     </div>
-</article>
-{% endblock content %}
+</article>{% endblock content %}
